nuevos cambios en document